# BCForth

./: CMakeLists.txt  LICENSE  README.md
add_ons/: AddOns.txt
doc/: ReadMe.txt
examples/: AD_Measurement.txt  ErathoSieve.txt  ErathoSieveEx.txt  Factorial.txt  Fibo.txt  ForthExamples.txt  ForthExamples_2.txt  Postpone.txt  QuadEq.txt  QuadEqVars.txt  VectoredExecution.txt  test.txt
icon/: BCForth.tif  BCForth2.tif
include/: BaseDefinitions.h  Forth.h  ForthCompiler.h  ForthInterpreter.h
include/Auxiliary/: TheStack.h
include/Interfaces/: Interfaces.h  Tokenizer.h
include/Modules/: CoreModule.h  FP_Module.h  Modules.h  RandModule.h  StringModule.h  TimeModule.h
include/Words/: StructWords.h  SystemWords.h  Words.h
src/: main.cpp
